# touchscreen-calibrator

./: CMakeLists.txt
debian/: changelog  control  copyright  rules
locale/: es.po  messages.pot  touchscreen-calibrator_ca-es.ts  touchscreen-calibrator_es-es.ts
rsrc/: calibration.qml  resources.qrc  touchscreen-calibrator-server.desktop  touchscreen-calibrator.desktop
src/: CMakeLists.txt  calibrationwindow.cpp  calibrationwindow.hpp  inputbackend.cpp  inputbackend.hpp  inputdevice.cpp  inputdevice.hpp  inputmanager.cpp  inputmanager.hpp  main.cpp  proxy.cpp  proxy.hpp  selectionwindow.cpp  selectionwindow.hpp  server.cpp  server.hpp  x11backend.cpp  x11backend.hpp  x11device.cpp  x11device.hpp  x11listener.cpp  x11listener.hpp
